add styles, improve layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RetroRepo</string>
+    <string name="language">language: %s</string>
+    <string name="hint_search">Search for repositories...</string>
+    <string name="search">Search</string>
 </resources>
